migration-result/ver/16.x/access-controls/guides/per-session-mfa.mdx
---
title: Per-session MFA
description: Require MFA checks to initiate sessions.
videoBanner: j8Ze7HhjFGw
version: '16.x'
---

Teleport supports requiring additional multi-factor authentication checks
when starting new:

- SSH connections (a single `tsh ssh` call, Web UI SSH session or Teleport Connect SSH session)
- Kubernetes sessions (a single `kubectl` call)
- Database sessions (a single `tsh db connect` call)
- Desktop sessions

This is an advanced security feature that protects users against compromises of
their on-disk Teleport certificates.

<Note>
  In addition to per-session MFA, enable login MFA in your SSO provider and/or
  for all [local Teleport
  users](/ver/16.x/reference/authentication#local-no-authentication-connector)
  to improve security.
</Note>

## Prerequisites

<Tabs>
  <Tab title="Teleport Community Edition">
    - A running Teleport cluster. For details on how to set this up, see the
      [Getting Started](/ver/16.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 15.0.0-dev.

      See [Installation](/ver/16.x/installation) for details.

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport v15.0.0-dev git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v15.0.0-dev go1.21
    Proxy version: 15.0.0-dev
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Team">
    - A Teleport Team account. If you don't have an account, sign
      up to begin your [free trial](https://goteleport.com/signup/).

    - The Enterprise `tctl` admin tool and `tsh` client tool, version >= 14.3.3.

      You can download these tools from the [Cloud Downloads page](/ver/16.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v14.3.3 git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v14.3.3 go1.21
    Proxy version: 14.3.3
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see the Enterprise
      [Getting Started](/ver/16.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >=
      15.0.0-dev.

      You can download these tools by visiting your [Teleport
      account workspace](https://teleport.sh).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v15.0.0-dev git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v15.0.0-dev go1.21
    Proxy version: 15.0.0-dev
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you don't have an account,
      sign up to begin a [free trial](https://goteleport.com/signup/)  of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 14.3.3.

      You can download these tools from the [Cloud Downloads page](/ver/16.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v14.3.3 git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v14.3.3 go1.21
    Proxy version: 14.3.3
    Proxy: teleport.example.com
    ```
  </Tab>
</Tabs>

- To check that you can connect to your Teleport cluster, sign in with `tsh login`, then
  verify that you can run `tctl` commands using your current credentials.
  `tctl` is supported on macOS and Linux machines.

  For example:
  ```code
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  15.0.0-dev
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  If you can connect to the cluster and run the `tctl status` command, you can use your
  current credentials to run subsequent `tctl` commands from your workstation.
  If you host your own Teleport cluster, you can also run `tctl` commands on the computer that
  hosts the Teleport Auth Service for full permissions.
- [WebAuthn configured](/ver/16.x/access-controls/guides/webauthn) on this cluster
- Second factor hardware device, such as YubiKey or SoloKey
- A Web browser with [WebAuthn support](https://developers.yubico.com/WebAuthn/WebAuthn_Browser_Support/) (if using
  SSH or desktop sessions from the Teleport Web UI).

<Note>
  Teleport FIPS builds disable local users. To configure WebAuthn in order to use
  per-session MFA with FIPS builds, provide the following in your `teleport.yaml`:

  ```yaml
  teleport:
    auth_service:
      local_auth: false
      second_factor: optional
      webauthn:
        rp_id: teleport.example.com
  ```
</Note>

## Configure per-session MFA

Per-session MFA can be enforced cluster-wide or only for some specific roles.

### Cluster-wide

<Tabs>
  <Tab title="Self-Hosted">
    To enforce MFA checks for all roles, edit your cluster authentication
    configuration:

    <Tabs>
      <Tab title="Static configuration">
        Update `teleport.yaml` on the Auth Server to include the following content:

        ```yaml
        auth_service:
          authentication:
            # require per-session MFA cluster-wide
            require_session_mfa: yes
        ```
      </Tab>

      <Tab title="Dynamic resources">
        Obtain your existing `cluster_auth_preference` resource:

        ```code
        $ tctl get cap > cap.yaml
        ```

        Ensure that `cap.yaml` contains the following content:

        ```yaml
        kind: cluster_auth_preference
        metadata:
          name: cluster-auth-preference
        spec:
          require_session_mfa: true
        version: v2
        ```

        Create the resource:

        ```code
        $ tctl create -f cap.yaml
        ```
      </Tab>
    </Tabs>
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    Obtain your existing `cluster_auth_preference` resource:

    ```code
    $ tctl get cap > cap.yaml
    ```

    Ensure that `cap.yaml` contains the following content:

    ```yaml
    kind: cluster_auth_preference
    metadata:
      name: cluster-auth-preference
    spec:
      require_session_mfa: true
    version: v2
    ```

    Create the resource:

    ```code
    $ tctl create -f cap.yaml
    ```
  </Tab>
</Tabs>

### Per role

To enforce MFA checks for a specific role, update the role to contain:

```yaml
kind: role
version: v7
metadata:
  name: example-role-with-mfa
spec:
  options:
    # require per-session MFA for this role
    require_session_mfa: true
  allow:
    ...
  deny:
    ...
```

Role-specific enforcement only applies when accessing resources matching a
role's `allow` section.

### Roles example

Let's walk through an example of setting up per-session MFA checks for roles.

Jerry is an engineer with access to the company infrastructure. The
infrastructure is split into development and production environments. Security
engineer Olga wants to enforce MFA checks for accessing production servers.
Development servers don't require this to reduce engineers' friction.

Olga defines two Teleport roles: `access-dev` and `access-prod`:

```yaml
# access-dev.yaml
kind: role
version: v7
metadata:
  name: access-dev
spec:
  allow:
    node_labels:
      env: dev
    logins:
      - jerry
---
# access-prod.yaml
kind: role
version: v7
metadata:
  name: access-prod
spec:
  options:
    # require per-session MFA for production access
    require_session_mfa: true
  allow:
    node_labels:
      env: prod
    logins:
      - jerry
  deny: {}
```

Olga then assigns both roles to all engineers, including Jerry.

When Jerry logs into node `dev1.example.com` (with label `env: dev` as login `jerry`), nothing
special happens:

```code
$ tsh ssh jerry@dev1.example.com

# jerry@dev1.example.com >
```

But when Jerry logs into node `rod3.example.com` (with label `env: prod` as login `jerry`), he
gets prompted for an MFA check:

```code
$ tsh ssh jerry@prod3.example.com
# Tap any security key <tap>

# jerry@prod3.example.com >
```

<Tip>
  If you are using `tsh` in a constrained environment, you can tell it to use
  OTP by doing `tsh --mfa-mode=otp ssh prod3.example.com`.

  OTP can only be used with per-session MFA when using `tsh` or Teleport Connect to
  establish connections. A hardware MFA key is required for using per-session
  MFA with Teleport's Web UI.
</Tip>

If per-session MFA was enabled cluster-wide, Jerry would be prompted for MFA
even when logging into `dev1.example.com`.

<Tip>
  The Teleport Database Service supports per-connection MFA. When Jerry connects
  to the database `prod-mysql-instance` (with label `env: prod`), he gets prompted
  for an MFA check for each `tsh db connect` or `tsh proxy db` call:

  ```code
  $ tsh db connect prod-mysql-instance
  # Tap any security key

  # Welcome to the MySQL monitor.  Commands end with ; or \g.
  # Your MySQL connection id is 10002
  # Server version: 8.0.0-Teleport (Ubuntu)
  #
  # Copyright (c) 2000, 2021, Oracle and/or its affiliates.
  #
  # Oracle is a registered trademark of Oracle Corporation and/or its
  # affiliates. Other names may be trademarks of their respective
  # owners.
  #
  # Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
  #
  # mysql>
  ```
</Tip>

## Limitations

Current limitations for this feature are:

- For SSH connections besides the Web UI, the `tsh` or Teleport Connect client must be used for per-session MFA.
  (The OpenSSH `ssh` client does not work with per-session MFA).
- Only `kubectl` supports per-session WebAuthn authentication for Kubernetes.
- Database access with per-session MFA only works with `tsh db connect`.
  Per-session MFA for databases is not supported in Teleport Connect.
- Application access clients don't support per-session MFA
  authentication yet, although cluster and role configuration applies to them.
  If you enable per-session MFA checks cluster-wide, you will not be able to
  use Application access. We're working on integrating per-session
  MFA checks for these clients.
- For desktop access, only WebAuthn devices are supported.
